# CPPMonetize

./: .gitignore  CMakeLists.txt  README.md
docs/: COMPATIBILITY_MATRIX.md  ROLLOUT_ROLLBACK.md  SLO_ALERTS.md
include/cppmonetize/: ApiError.h  ApiErrorUtils.h  AuthIdentity.h  Models.h  MonetizeClient.h  OAuthDesktopFlow.h  OfflinePolicy.h  Result.h  TokenStore.h
scripts/: compat_smoke.sh
src/: ApiErrorUtils.cpp  AuthIdentity.cpp  Models.cpp  MonetizeClient.cpp  OAuthDesktopFlow.cpp  TokenStore.cpp
tests/: test_models.cpp  test_oauth_desktop_flow.cpp
